[gd_scene load_steps=39 format=3 uid="uid://dundoq5yx4i4j"]

[ext_resource type="Script" path="res://Assets/bow_enemy.gd" id="1_pynan"]
[ext_resource type="PackedScene" uid="uid://knrylrr4rfq1" path="res://Assets/enemy_arrow.tscn" id="2_55p7u"]
[ext_resource type="Texture2D" uid="uid://d2pku8huvp2tt" path="res://Arta/Torch/sheet.png" id="2_mwu1e"]
[ext_resource type="Texture2D" uid="uid://jop7tnpf8rt0" path="res://Arta/Enemies/Bow Idle.png" id="3_e0nju"]
[ext_resource type="Texture2D" uid="uid://b1mykq0fskt37" path="res://Arta/Enemies/Bow Run.png" id="4_ofh0c"]
[ext_resource type="Texture2D" uid="uid://drqns68gt8n16" path="res://Arta/Info Board/ExclamationMark-16x16-1.png.png" id="4_pl3gp"]

[sub_resource type="Curve" id="Curve_5mwr6"]
max_value = 3.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.866667, 0.824176), 0.0, 0.0, 0, 0, Vector2(1, 1.18681), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_52rqs"]
curve = SubResource("Curve_5mwr6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vp7v4"]
lifetime_randomness = 0.05
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, -16.265, 0)
emission_shape_scale = Vector3(2, 2, 1)
emission_shape = 2
emission_sphere_radius = 4.65
angle_min = -64.7
angle_max = 61.9
spread = 180.0
initial_velocity_min = 36.47
initial_velocity_max = 89.89
gravity = Vector3(0, 98, 0)
radial_accel_min = 22.47
radial_accel_max = 35.96
scale_max = 1.2
scale_over_velocity_min = 11.23
scale_over_velocity_max = 22.47
scale_over_velocity_curve = SubResource("CurveTexture_52rqs")
color = Color(1, 0.168627, 0.180392, 1)
turbulence_enabled = true
turbulence_noise_strength = 1.26
turbulence_noise_scale = 1.632
collision_mode = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ydcea"]
size = Vector2(16, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mtq4"]
atlas = ExtResource("3_e0nju")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvla0"]
atlas = ExtResource("3_e0nju")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aj7mo"]
atlas = ExtResource("4_ofh0c")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpkk8"]
atlas = ExtResource("4_ofh0c")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyw6o"]
atlas = ExtResource("4_ofh0c")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhghs"]
atlas = ExtResource("4_ofh0c")
region = Rect2(144, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yju4s"]
atlas = ExtResource("4_ofh0c")
region = Rect2(0, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iq4e2"]
atlas = ExtResource("4_ofh0c")
region = Rect2(48, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_31q4f"]
atlas = ExtResource("4_ofh0c")
region = Rect2(96, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wue4j"]
atlas = ExtResource("4_ofh0c")
region = Rect2(144, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mw3fl"]
atlas = ExtResource("4_ofh0c")
region = Rect2(0, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6w5l"]
atlas = ExtResource("4_ofh0c")
region = Rect2(48, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4px8c"]
atlas = ExtResource("4_ofh0c")
region = Rect2(96, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x247e"]
atlas = ExtResource("4_ofh0c")
region = Rect2(144, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkm4y"]
atlas = ExtResource("4_ofh0c")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6k0st"]
atlas = ExtResource("4_ofh0c")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3v3v"]
atlas = ExtResource("4_ofh0c")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iw1ay"]
atlas = ExtResource("4_ofh0c")
region = Rect2(144, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfxvg"]
atlas = ExtResource("4_ofh0c")
region = Rect2(0, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6swp"]
atlas = ExtResource("4_ofh0c")
region = Rect2(48, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkjca"]
atlas = ExtResource("4_ofh0c")
region = Rect2(96, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h53l0"]
atlas = ExtResource("4_ofh0c")
region = Rect2(144, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq32t"]
atlas = ExtResource("4_ofh0c")
region = Rect2(0, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_axku3"]
atlas = ExtResource("4_ofh0c")
region = Rect2(48, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyh0a"]
atlas = ExtResource("4_ofh0c")
region = Rect2(96, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4qm6"]
atlas = ExtResource("4_ofh0c")
region = Rect2(144, 128, 48, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fqesj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mtq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvla0")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj7mo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpkk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyw6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhghs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yju4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq4e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31q4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wue4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mw3fl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6w5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4px8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x247e")
}],
"loop": true,
"name": &"Running",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkm4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6k0st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3v3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iw1ay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfxvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6swp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkjca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h53l0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq32t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axku3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyh0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4qm6")
}],
"loop": true,
"name": &"Walking",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_mwu1e")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c1a0b"]
size = Vector2(48, 64)

[node name="Bow_Enemy" type="CharacterBody2D"]
collision_layer = 66
collision_mask = 5
platform_floor_layers = 4294967044
script = ExtResource("1_pynan")
arrow = ExtResource("2_55p7u")

[node name="Blood_Particles" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_vp7v4")
lifetime = 0.5
one_shot = true
explosiveness = 0.59
trail_enabled = true
trail_lifetime = 0.05
trail_sections = 2
trail_section_subdivisions = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ydcea")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 2
position = Vector2(0, 0.5)
sprite_frames = SubResource("SpriteFrames_fqesj")
animation = &"Running"

[node name="excl_mark" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -48)
texture = ExtResource("4_pl3gp")

[node name="Shoot_Timer" type="Timer" parent="."]
wait_time = 1.8
one_shot = true

[node name="Show_ExclMark_Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Change_State_Cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="Cooldown_Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Wait_Before_Jump_Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Dead_Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Check_To_Run_Right" type="Area2D" parent="."]
collision_layer = 16

[node name="Check_For_Player" type="CollisionPolygon2D" parent="Check_To_Run_Right"]
modulate = Color(0.266667, 0.266667, 0.266667, 1)
polygon = PackedVector2Array(8, 32, 128, 56, 128, -64, 8, -32)

[node name="Check_To_Shoot_Right" type="Area2D" parent="."]
collision_layer = 16

[node name="Check_For_Player" type="CollisionPolygon2D" parent="Check_To_Shoot_Right"]
modulate = Color(0.258824, 0.258824, 0.258824, 1)
polygon = PackedVector2Array(8, 32, 224, 96, 224, -112, 8, -32)

[node name="Check_To_Run_Left" type="Area2D" parent="."]
scale = Vector2(-1, 1)
collision_layer = 16

[node name="Check_For_Player" type="CollisionPolygon2D" parent="Check_To_Run_Left"]
modulate = Color(0.266667, 0.266667, 0.266667, 1)
polygon = PackedVector2Array(8, 32, 128, 56, 128, -64, 8, -32)

[node name="Check_To_Shoot_Left" type="Area2D" parent="."]
rotation = 3.14159
scale = Vector2(1, -1)
collision_layer = 16

[node name="Check_For_Player" type="CollisionPolygon2D" parent="Check_To_Shoot_Left"]
modulate = Color(0.258824, 0.258824, 0.258824, 1)
polygon = PackedVector2Array(8, 32, 224, 95.9994, 224, -112.001, 8, -32)

[node name="Check_For_Player_Ball" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Check_For_Player_Ball"]
shape = SubResource("RectangleShape2D_c1a0b")
debug_color = Color(0.298039, 0, 0.113725, 0.419608)

[connection signal="timeout" from="Show_ExclMark_Timer" to="." method="_on_show_excl_mark_timer_timeout"]
[connection signal="timeout" from="Change_State_Cooldown" to="." method="_on_change_state_cooldown_timeout"]
[connection signal="timeout" from="Cooldown_Timer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="Wait_Before_Jump_Timer" to="." method="_on_wait_before_jump_timer_timeout"]
[connection signal="timeout" from="Dead_Timer" to="." method="_on_dead_timer_timeout"]
[connection signal="body_entered" from="Check_To_Run_Right" to="." method="_on_check_to_run_body_entered"]
[connection signal="body_exited" from="Check_To_Run_Right" to="." method="_on_check_to_run_body_exited"]
[connection signal="body_entered" from="Check_To_Shoot_Right" to="." method="_on_check_for_player_to_shoot_body_entered"]
[connection signal="body_exited" from="Check_To_Shoot_Right" to="." method="_on_check_for_player_to_shoot_body_exited"]
[connection signal="body_entered" from="Check_To_Run_Left" to="." method="_on_check_to_run_body_entered"]
[connection signal="body_entered" from="Check_To_Shoot_Left" to="." method="_on_check_for_player_to_shoot_body_entered"]
[connection signal="body_exited" from="Check_To_Shoot_Left" to="." method="_on_check_for_player_to_shoot_body_exited"]
